force-app/main/default/objects/Survey_Feedback__c/Survey_Feedback__c.object-meta.xml
<CustomObject>
    <description>Collects Clicktools survey results</description>
    <label>Case Survey</label>
    <nameField>
        <label>Survey Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>