force-app/main/default/objects/Survey_Feedback__c/fields/Comment_explain_your_rating__c.field-meta.xml
<CustomField>
    <fullName>Comment_explain_your_rating__c</fullName>
    <label>Comment - explain your rating</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>