force-app/main/default/objects/Survey_Feedback__c/fields/Company_name__c.field-meta.xml
<CustomField>
    <fullName>Company_name__c</fullName>
    <label>Company name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>