force-app/main/default/objects/Survey_Feedback__c/fields/Continue_your_relationship_with_Trion__c.field-meta.xml
<CustomField>
    <fullName>Continue_your_relationship_with_Trion__c</fullName>
    <label>Continue your relationship with Trion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>