force-app/main/default/objects/Survey_Feedback__c/fields/How_long_have_you_been_a_client__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_been_a_client__c</fullName>
    <label>How long have you been a client</label>
    <length>25</length>
    <type>Text</type>
</CustomField>