force-app/main/default/objects/Survey_Feedback__c/fields/How_satisfied_are_you_with_the_service__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_are_you_with_the_service__c</fullName>
    <label>How satisfied are you with the service</label>
    <length>30</length>
    <type>Text</type>
</CustomField>