force-app/main/default/objects/Survey_Feedback__c/fields/Rate_your_last_interaction_with_Trion__c.field-meta.xml
<CustomField>
    <fullName>Rate_your_last_interaction_with_Trion__c</fullName>
    <label>Rate your last interaction with Trion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>