force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed_Date__c</fullName>
    <label>Survey Completed Date</label>
    <type>Date</type>
</CustomField>