force-app/main/default/objects/Survey_Feedback__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <label>Survey URL</label>
    <type>Url</type>
</CustomField>