force-app/main/default/objects/Survey_Feedback__c/fields/Trion_service_refer__c.field-meta.xml
<CustomField>
    <fullName>Trion_service_refer__c</fullName>
    <label>Trion service refer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>